move flush archive menu item to SDKMAN! menu